--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -96,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "# If this returns false, see the next cell!\n",
@@ -141,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
     "\n",
@@ -159,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,9 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 equals 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -215,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,9 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If it takes 5 machines 5 minutes to make 5 widgets, how long would it take 100 machines to make 100 widgets?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
@@ -245,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,9 +290,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's analyze the problem step-by-step:\n",
+      "\n",
+      "- **Given:** 5 machines take 5 minutes to make 5 widgets.\n",
+      "- **Goal:** Find how long 100 machines take to make 100 widgets.\n",
+      "\n",
+      "**Step 1: Find the rate of one machine.**\n",
+      "\n",
+      "Since 5 machines make 5 widgets in 5 minutes, one machine makes:\n",
+      "\n",
+      "- 5 widgets / 5 machines = 1 widget in 5 minutes.\n",
+      "\n",
+      "So, one machine takes 5 minutes to make 1 widget.\n",
+      "\n",
+      "**Step 2: Find how long 100 machines take to make 100 widgets.**\n",
+      "\n",
+      "Each machine makes 1 widget in 5 minutes.\n",
+      "\n",
+      "- 100 machines can work simultaneously.\n",
+      "- Since each machine produces 1 widget in 5 minutes, 100 machines can produce 100 widgets in 5 minutes.\n",
+      "\n",
+      "**Answer:** It would take **5 minutes** for 100 machines to make 100 widgets.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
@@ -272,9 +335,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's analyze the problem step-by-step:\n",
+       "\n",
+       "- **Given:** 5 machines take 5 minutes to make 5 widgets.\n",
+       "- **Goal:** Find how long 100 machines take to make 100 widgets.\n",
+       "\n",
+       "**Step 1: Find the rate of one machine.**\n",
+       "\n",
+       "Since 5 machines make 5 widgets in 5 minutes, one machine makes:\n",
+       "\n",
+       "- 5 widgets / 5 machines = 1 widget in 5 minutes.\n",
+       "\n",
+       "So, one machine takes 5 minutes to make 1 widget.\n",
+       "\n",
+       "**Step 2: Find how long 100 machines take to make 100 widgets.**\n",
+       "\n",
+       "Each machine makes 1 widget in 5 minutes.\n",
+       "\n",
+       "- 100 machines can work simultaneously.\n",
+       "- Since each machine produces 1 widget in 5 minutes, 100 machines can produce 100 widgets in 5 minutes.\n",
+       "\n",
+       "**Answer:** It would take **5 minutes** for 100 machines to make 100 widgets."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -317,23 +413,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A significant pain point in the English learning industry is **lack of personalized, context-relevant learning**. Many students struggle because traditional programs often use a one-size-fits-all curriculum that doesn't account for individual goals, interests, or real-life situations. This can lead to disengagement, slow progress, and difficulty applying what they've learned in practical conversations or professional environments. Addressing this challenge requires adaptive learning technologies and more customized content that resonates with each learner’s unique needs.\n"
+     ]
+    }
+   ],
    "source": [
     "# First create the messages:\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "messages = [{\"role\": \"user\", \"content\": \"For the learning english industry, I want you present a pain-point in this industry, something challenging for the students\"}]\n",
     "\n",
     "# Then make the first call:\n",
     "\n",
-    "response =\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
     "\n",
     "# Then read the business idea:\n",
     "\n",
-    "business_idea = response.\n",
+    "business_idea = response.choices[0].message.content\n",
+    "print(business_idea)\n",
     "\n",
-    "# And repeat! In the next message, include the business idea within the message"
+    "# And repeat! In the next message, include the business idea within the message\n"
    ]
   },
   {
@@ -358,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
