--- a/1_foundations/2_lab2.ipynb
+++ b/1_foundations/2_lab2.ipynb
@@ -45,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Always remember to do this!\n",
     "load_dotenv(override=True)"
@@ -55,9 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Anthropic API Key not set (and this is optional)\n",
+      "Google API Key not set (and this is optional)\n",
+      "DeepSeek API Key not set (and this is optional)\n",
+      "Groq API Key not set (and this is optional)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the key prefixes to help with any debugging\n",
     "\n",
@@ -106,18 +129,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'user',\n",
+       "  'content': 'Please come up with a challenging, nuanced question that I can ask a number of LLMs to evaluate their intelligence. Answer only with the question, no explanation.'}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "messages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you could redesign human society from scratch while ensuring the preservation of diverse cultures and identities, what core principles and structures would you implement to balance individual freedom, social responsibility, and collective well-being?\n"
+     ]
+    }
+   ],
    "source": [
     "openai = OpenAI()\n",
     "response = openai.chat.completions.create(\n",
@@ -141,9 +184,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Redesigning human society while preserving diverse cultures and identities is a complex task, but certain core principles and structures can be implemented to achieve a balance between individual freedom, social responsibility, and collective well-being. Here are some fundamental ideas:\n",
+       "\n",
+       "### Core Principles:\n",
+       "\n",
+       "1. **Respect for Diversity**:\n",
+       "   - Create a robust framework that promotes cultural pluralism, allowing multiple identities and practices to coexist. This could include cultural education programs, celebration of diverse traditions, and legal protections for minority cultures.\n",
+       "\n",
+       "2. **Empowered Communities**:\n",
+       "   - Foster local governance structures that give communities a voice in decision-making. Establish participatory democracy practices, such as town hall meetings and consensus-building forums, to encourage civic engagement.\n",
+       "\n",
+       "3. **Social Safety Nets**:\n",
+       "   - Implement comprehensive social safety nets that assure minimum living standards for all, including access to healthcare, education, and housing. This promotes social responsibility while ensuring individual dignity and freedom.\n",
+       "\n",
+       "4. **Ecological Sustainability**:\n",
+       "   - Embed environmental stewardship into the core of societal values. Promote sustainable practices and policies that protect ecosystems while offering incentives for businesses and communities to adopt green technologies.\n",
+       "\n",
+       "5. **Equitable Resource Distribution**:\n",
+       "   - Establish fair economic systems that prevent extreme disparities in wealth. Consider implementing basic income systems, wealth taxes, or cooperatives that distribute profits among members to ensure everyone has access to resources.\n",
+       "\n",
+       "6. **Education for Critical Thinking and Empathy**:\n",
+       "   - Revamp educational systems to emphasize critical thinking, media literacy, and empathy. Curriculum should include diverse histories, philosophies, and worldviews, fostering understanding and collaboration among different cultures.\n",
+       "\n",
+       "### Structural Elements:\n",
+       "\n",
+       "1. **Decentralized Governance**:\n",
+       "   - Create a tiered governance system that combines local autonomy with broader regional and global collaboration. Local councils could address community-specific issues while larger bodies handle cross-regional concerns.\n",
+       "\n",
+       "2. **Participatory Economic Systems**:\n",
+       "   - Emphasize cooperative businesses and social enterprises that prioritize community benefit over profit maximization. Encourage transparent business practices that enable consumers to make informed choices aligned with their values.\n",
+       "\n",
+       "3. **Cultural Exchange Programs**:\n",
+       "   - Promote systems for cultural exchange that facilitate direct interactions among diverse groups, enhancing understanding and respect. Such interactions might include cultural festivals, art exchanges, and scholarship programs.\n",
+       "\n",
+       "4. **Inclusive Technology Access**:\n",
+       "   - Ensure equitable access to technology as a tool for empowerment. Provide resources for underrepresented communities to engage with and benefit from digital innovations, promoting inclusivity in the digital age.\n",
+       "\n",
+       "5. **Conflict Resolution Mechanisms**:\n",
+       "   - Establish restorative justice approaches to address conflicts and grievances. This emphasizes understanding and reconciliation rather than punitive measures, fostering a sense of community and collective responsibility.\n",
+       "\n",
+       "6. **Well-being Focused Policies**:\n",
+       "   - Develop policies that prioritize mental and physical well-being, including universal access to psychological services, stress management programs, and community wellness initiatives.\n",
+       "\n",
+       "By embedding these principles and structures into the framework of society, we can create an environment that nurtures individual freedom while also emphasizing social responsibility and collective well-being. The aim should be a vibrant society that values every culture and identity, fostering understanding and cooperation among its members."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# The API we know well\n",
     "\n",
@@ -295,9 +393,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['gpt-4o-mini']\n",
+      "['Redesigning human society while preserving diverse cultures and identities is a complex task, but certain core principles and structures can be implemented to achieve a balance between individual freedom, social responsibility, and collective well-being. Here are some fundamental ideas:\\n\\n### Core Principles:\\n\\n1. **Respect for Diversity**:\\n   - Create a robust framework that promotes cultural pluralism, allowing multiple identities and practices to coexist. This could include cultural education programs, celebration of diverse traditions, and legal protections for minority cultures.\\n\\n2. **Empowered Communities**:\\n   - Foster local governance structures that give communities a voice in decision-making. Establish participatory democracy practices, such as town hall meetings and consensus-building forums, to encourage civic engagement.\\n\\n3. **Social Safety Nets**:\\n   - Implement comprehensive social safety nets that assure minimum living standards for all, including access to healthcare, education, and housing. This promotes social responsibility while ensuring individual dignity and freedom.\\n\\n4. **Ecological Sustainability**:\\n   - Embed environmental stewardship into the core of societal values. Promote sustainable practices and policies that protect ecosystems while offering incentives for businesses and communities to adopt green technologies.\\n\\n5. **Equitable Resource Distribution**:\\n   - Establish fair economic systems that prevent extreme disparities in wealth. Consider implementing basic income systems, wealth taxes, or cooperatives that distribute profits among members to ensure everyone has access to resources.\\n\\n6. **Education for Critical Thinking and Empathy**:\\n   - Revamp educational systems to emphasize critical thinking, media literacy, and empathy. Curriculum should include diverse histories, philosophies, and worldviews, fostering understanding and collaboration among different cultures.\\n\\n### Structural Elements:\\n\\n1. **Decentralized Governance**:\\n   - Create a tiered governance system that combines local autonomy with broader regional and global collaboration. Local councils could address community-specific issues while larger bodies handle cross-regional concerns.\\n\\n2. **Participatory Economic Systems**:\\n   - Emphasize cooperative businesses and social enterprises that prioritize community benefit over profit maximization. Encourage transparent business practices that enable consumers to make informed choices aligned with their values.\\n\\n3. **Cultural Exchange Programs**:\\n   - Promote systems for cultural exchange that facilitate direct interactions among diverse groups, enhancing understanding and respect. Such interactions might include cultural festivals, art exchanges, and scholarship programs.\\n\\n4. **Inclusive Technology Access**:\\n   - Ensure equitable access to technology as a tool for empowerment. Provide resources for underrepresented communities to engage with and benefit from digital innovations, promoting inclusivity in the digital age.\\n\\n5. **Conflict Resolution Mechanisms**:\\n   - Establish restorative justice approaches to address conflicts and grievances. This emphasizes understanding and reconciliation rather than punitive measures, fostering a sense of community and collective responsibility.\\n\\n6. **Well-being Focused Policies**:\\n   - Develop policies that prioritize mental and physical well-being, including universal access to psychological services, stress management programs, and community wellness initiatives.\\n\\nBy embedding these principles and structures into the framework of society, we can create an environment that nurtures individual freedom while also emphasizing social responsibility and collective well-being. The aim should be a vibrant society that values every culture and identity, fostering understanding and cooperation among its members.']\n"
+     ]
+    }
+   ],
    "source": [
     "# So where are we?\n",
     "\n",
@@ -341,9 +448,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'together' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      1\u001b[39m judge = \u001b[33mf\u001b[39m\u001b[33m\"\"\"\u001b[39m\u001b[33mYou are judging a competition between \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(competitors)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m competitors.\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[33mEach model has been given this question:\u001b[39m\n\u001b[32m      3\u001b[39m \n\u001b[32m      4\u001b[39m \u001b[38;5;132;01m{\u001b[39;00mquestion\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[32m      5\u001b[39m \n\u001b[32m      6\u001b[39m \u001b[33mYour job is to evaluate each response for clarity and strength of argument, and rank them in order of best to worst.\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[33mRespond with JSON, and only JSON, with the following format:\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;130;01m{{\u001b[39;00m\u001b[33m\"\u001b[39m\u001b[33mresults\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m: [\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mbest competitor number\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\u001b[33msecond best competitor number\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mthird best competitor number\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m, ...]\u001b[39m\u001b[38;5;130;01m}}\u001b[39;00m\n\u001b[32m      9\u001b[39m \n\u001b[32m     10\u001b[39m \u001b[33mHere are the responses from each competitor:\u001b[39m\n\u001b[32m     11\u001b[39m \n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[38;5;132;01m{\u001b[39;00m\u001b[43mtogether\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[32m     13\u001b[39m \n\u001b[32m     14\u001b[39m \u001b[33mNow respond with the JSON with the ranked order of the competitors, nothing else. Do not include markdown formatting or code blocks.\u001b[39m\u001b[33m\"\"\"\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'together' is not defined"
+     ]
+    }
+   ],
    "source": [
     "judge = f\"\"\"You are judging a competition between {len(competitors)} competitors.\n",
     "Each model has been given this question:\n",
@@ -466,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
