--- a/1_foundations/2_lab2.ipynb
+++ b/1_foundations/2_lab2.ipynb
@@ -75,7 +75,7 @@
      "text": [
       "OpenAI API Key exists and begins sk-proj-\n",
       "Anthropic API Key not set (and this is optional)\n",
-      "Google API Key not set (and this is optional)\n",
+      "Google API Key exists and begins AI\n",
       "DeepSeek API Key not set (and this is optional)\n",
       "Groq API Key not set (and this is optional)\n"
      ]
@@ -150,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If you could redesign human society from scratch while ensuring the preservation of diverse cultures and identities, what core principles and structures would you implement to balance individual freedom, social responsibility, and collective well-being?\n"
+      "If you were tasked with designing a new ethical framework for artificial intelligence that balances innovation with societal safety, what core principles would you include, and how would you address potential conflicts between these principles?\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,9 +276,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Okay, designing an ethical framework for AI is a complex challenge, requiring careful consideration of various stakeholders and potential consequences. Here's my approach, outlining core principles and how to manage potential conflicts:\n",
+       "\n",
+       "**Core Principles:**\n",
+       "\n",
+       "1.  **Human-Centricity & Flourishing:**\n",
+       "    *   **Definition:** AI should be designed and used to enhance human capabilities, well-being, and potential for flourishing, not to replace or diminish them. It should prioritize human autonomy, dignity, and fundamental rights.\n",
+       "    *   **Implications:** This principle guides AI development towards solving societal problems, augmenting human skills, and promoting inclusivity.  It pushes against AI systems that automate jobs without considering the impact on livelihoods or that reinforce existing inequalities.\n",
+       "\n",
+       "2.  **Transparency & Explainability:**\n",
+       "    *   **Definition:**  AI systems should be transparent and explainable to a degree appropriate to their impact and the context of their use.  This includes understanding how decisions are made, the data used, and potential biases.\n",
+       "    *   **Implications:**  Transparency builds trust and accountability. It enables auditing for fairness and bias, allows humans to intervene and correct errors, and provides users with a reasonable understanding of how AI affects them. The \"right to explanation\" is a key element.  The level of explainability required will vary; a medical diagnosis system needs far more transparency than a music recommendation algorithm.\n",
+       "\n",
+       "3.  **Fairness & Non-Discrimination:**\n",
+       "    *   **Definition:** AI systems should be designed and used to avoid perpetuating or amplifying biases that lead to unfair or discriminatory outcomes. Fairness should be considered across various dimensions (e.g., race, gender, religion, socio-economic status).\n",
+       "    *   **Implications:** This requires careful attention to data collection, algorithm design, and outcome evaluation.  It involves actively identifying and mitigating potential biases in training data and ensuring that AI systems are tested and validated across diverse populations. This principle also requires defining and operationalizing fairness metrics (e.g., equal opportunity, demographic parity) and acknowledging that different metrics may be appropriate in different contexts.\n",
+       "\n",
+       "4.  **Accountability & Responsibility:**\n",
+       "    *   **Definition:** Clear lines of accountability and responsibility should be established for the design, development, deployment, and use of AI systems. This includes identifying who is responsible for errors, biases, or unintended consequences.\n",
+       "    *   **Implications:** This principle necessitates a framework for assigning liability in cases where AI systems cause harm. It might involve holding developers, deployers, or users accountable, depending on the specific circumstances. Auditing and monitoring mechanisms are crucial for enforcing accountability. We need to consider both individual and organizational accountability.\n",
+       "\n",
+       "5.  **Privacy & Data Security:**\n",
+       "    *   **Definition:** AI systems should be designed and used in ways that respect individuals' privacy and protect their data. Data collection, storage, and processing should be transparent, secure, and compliant with relevant regulations.\n",
+       "    *   **Implications:** This principle necessitates strong data governance practices, including obtaining informed consent for data collection, implementing robust security measures to prevent data breaches, and providing individuals with control over their data. Data minimization (collecting only the data necessary for a specific purpose) is also a key aspect.\n",
+       "\n",
+       "6.  **Robustness & Safety:**\n",
+       "    *   **Definition:** AI systems should be designed to be robust, reliable, and safe under a variety of conditions, including adversarial attacks and unexpected inputs.\n",
+       "    *   **Implications:** This requires rigorous testing and validation of AI systems, as well as the development of techniques for detecting and mitigating potential risks. It involves considering edge cases and developing fail-safe mechanisms to prevent harm. Regular monitoring and maintenance are also essential.\n",
+       "\n",
+       "7.  **Sustainability & Environmental Responsibility:**\n",
+       "    *   **Definition:**  The development and deployment of AI should be environmentally sustainable and minimize its impact on the planet.\n",
+       "    *   **Implications:**  This requires considering the energy consumption of AI systems, the use of resources in hardware production, and the potential for AI to contribute to climate change solutions or exacerbate environmental problems.  This principle encourages the development of energy-efficient AI algorithms and the responsible use of resources.\n",
+       "\n",
+       "**Addressing Potential Conflicts Between Principles:**\n",
+       "\n",
+       "Conflicts between these principles are inevitable. Here's how I would approach managing them:\n",
+       "\n",
+       "1.  **Prioritization Framework (Context-Specific):**\n",
+       "    *   There's no one-size-fits-all solution. Prioritization must be context-specific and determined through stakeholder engagement.  For example, in healthcare, patient safety (Robustness & Safety) might take precedence over absolute transparency if full explainability compromises diagnostic accuracy. In other areas, fairness might be paramount.\n",
+       "    *   A framework for weighing principles based on the application and potential impacts is needed.  This framework should be transparent and subject to public debate.\n",
+       "\n",
+       "2.  **Trade-off Analysis & Documentation:**\n",
+       "    *   When conflicts arise, a thorough analysis of the potential trade-offs should be conducted. This analysis should consider the impact on all relevant stakeholders and document the rationale for the chosen approach.\n",
+       "    *   This documentation should be publicly accessible (where appropriate, balancing transparency with security/privacy) to facilitate scrutiny and accountability.\n",
+       "\n",
+       "3.  **Stakeholder Engagement & Deliberation:**\n",
+       "    *   Involve a diverse range of stakeholders in the decision-making process, including ethicists, developers, policymakers, users, and affected communities.\n",
+       "    *   Facilitate open and transparent dialogue to ensure that all perspectives are considered and that decisions reflect societal values.  This includes establishing mechanisms for public input and feedback.\n",
+       "\n",
+       "4.  **Dynamic & Iterative Approach:**\n",
+       "    *   The ethical framework should be viewed as a living document that is constantly evolving in response to new developments in AI and changes in societal values.\n",
+       "    *   Regular reviews and updates are necessary to ensure that the framework remains relevant and effective.\n",
+       "    *   Implement continuous monitoring and evaluation of AI systems to identify potential ethical issues and address them proactively.\n",
+       "\n",
+       "5.  **Algorithmic Auditing & Impact Assessments:**\n",
+       "    *   Implement independent algorithmic audits to assess AI systems for fairness, bias, and compliance with ethical principles.\n",
+       "    *   Conduct impact assessments to evaluate the potential social, economic, and environmental consequences of AI deployments.\n",
+       "\n",
+       "6.  **Education & Awareness:**\n",
+       "    *   Promote education and awareness about the ethical implications of AI among developers, policymakers, and the general public.\n",
+       "    *   Foster a culture of ethical AI development and use.\n",
+       "\n",
+       "7. **Escalation Mechanism:**\n",
+       "    * A clear escalation path is required for situations where ethical conflicts are not resolved through the standard process.  This might involve an independent ethics review board or a regulatory body.\n",
+       "\n",
+       "**Example Conflict & Resolution:**\n",
+       "\n",
+       "*   **Conflict:** Improving the accuracy of a facial recognition system (Robustness) requires collecting and analyzing large amounts of sensitive personal data (Privacy).\n",
+       "*   **Resolution:**\n",
+       "    *   **Data Minimization:** Collect only the data that is absolutely necessary for improving accuracy.\n",
+       "    *   **Anonymization/De-identification:**  Employ techniques to anonymize or de-identify data wherever possible.\n",
+       "    *   **Transparency & Consent:** Be transparent about data collection practices and obtain informed consent from individuals.\n",
+       "    *   **Secure Data Storage:** Implement robust security measures to protect data from unauthorized access.\n",
+       "    *   **Contextual Limitations:**  Limit the use of facial recognition to specific, justifiable contexts (e.g., law enforcement with appropriate warrants).\n",
+       "\n",
+       "**Key Considerations:**\n",
+       "\n",
+       "*   **Global Harmonization:** While ethical frameworks need to be adapted to local contexts, efforts should be made to harmonize ethical principles and standards across different countries and regions.\n",
+       "*   **Regulatory Frameworks:**  Governments should play a role in establishing regulatory frameworks for AI that enforce ethical principles and ensure accountability.  However, regulation should be carefully designed to avoid stifling innovation.\n",
+       "*   **Industry Self-Regulation:**  Industry should also take responsibility for developing and implementing ethical guidelines and standards for AI development and use.\n",
+       "\n",
+       "By adopting these principles and a proactive approach to conflict resolution, we can strive to create an ethical framework that promotes responsible AI innovation that benefits humanity while mitigating potential risks.\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "gemini = OpenAI(api_key=google_api_key, base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\")\n",
     "model_name = \"gemini-2.0-flash\"\n",
